setups/gitea/gitea-credentials.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
