setups/gitea/gitea-install.yaml
# Source: gitea/templates/gitea/http-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-gitea-http
  labels:
    helm.sh/chart: gitea-10.1.4
    app: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: my-gitea
    app.kubernetes.io/version: "1.22.0"
    version: "1.22.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    {}
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 3000
    targetPort: 
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: my-gitea
---
# Source: gitea/templates/gitea/ssh-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-gitea-ssh
  labels:
    helm.sh/chart: gitea-10.1.4
    app: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: my-gitea
    app.kubernetes.io/version: "1.22.0"
    version: "1.22.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    {}
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
  - name: ssh
    port: 22
    targetPort: 2222
    protocol: TCP
    nodePort: 32222
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: my-gitea
---
# Source: gitea/templates/gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-gitea
  annotations:
  labels:
    helm.sh/chart: gitea-10.1.4
    app: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: my-gitea
    app.kubernetes.io/version: "1.22.0"
    version: "1.22.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app.kubernetes.io/name: gitea
      app.kubernetes.io/instance: my-gitea
  template:
    metadata:
      annotations:
        checksum/config: 580768b87aa17fe5c0242d80246c938f12e3fa1dc832248d94f9f691fd00e515
      labels:
        helm.sh/chart: gitea-10.1.4
        app: gitea
        app.kubernetes.io/name: gitea
        app.kubernetes.io/instance: my-gitea
        app.kubernetes.io/version: "1.22.0"
        version: "1.22.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 60
      containers:
        - name: gitea
          image: "gitea/gitea:1.22.0-rootless"
          imagePullPolicy: IfNotPresent
          ports:
            - name: ssh
              containerPort: 2222
            - name: http
              containerPort: 3000
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 200
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          resources:
            {}
          securityContext:
            {}
          volumeMounts:
            - name: temp
              mountPath: /tmp
            - name: data
              mountPath: /data
            
      volumes:
        - name: init
          secret:
            secretName: my-gitea-init
            defaultMode: 110
        - name: config
          secret:
            secretName: my-gitea
            defaultMode: 110
        - name: inline-config-sources
          secret:
            secretName: my-gitea-inline-config
        - name: temp
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: gitea-shared-storage
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-gitea-path
  namespace: gitea
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gitea.elamaras.people.aws.dev
      secretName: gitea-prod-tls
  rules:
    - host: gitea.elamaras.people.aws.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-gitea-http
                port:
                  number: 3000
